<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/scanFragment"
        android:icon="@drawable/ic_scan"
        android:title="@string/nav_scan" />
    <item
        android:id="@+id/createFragment"
        android:icon="@drawable/ic_create"
        android:title="@string/nav_create" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/vaultFragment"
        android:icon="@drawable/ic_vault"
        android:title="@string/nav_vault" />
</menu>
